# deno-faas

./: Cargo.toml  hello.bundle.js  hello.ts  readme.md
bundler/: compile.ts
examples/: example.js  run.rs
src/: lib.rs  main.rs  runtime.js
src/ops/: file_op.rs  mod.rs
