[package]
name = "deno_faas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.153.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_v8 = "0.64.0"
tokio = { version = "1.21.1", features = ["full"] }

